Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <main>
     <div class="image">
-      <img src="images/image-product-mobile.jpg" alt="Perfume Product" class="mobile">
-      <img src="images/image-product-desktop.jpg" alt="Perfume Product" class="desktop">
+      <img src="image-product-mobile.jpg" alt="Perfume Product" class="mobile">
+      <img src="image-product-desktop.jpg" alt="Perfume Product" class="desktop">
     </div>
 
     <section class="content">
