--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
@@ -13,8 +13,8 @@
 <body>
   <main>
     <div class="image">
-      <img src="image-product-mobile.jpg" alt="Perfume Product" class="mobile">
-      <img src="image-product-desktop.jpg" alt="Perfume Product" class="desktop">
+      <img src="./image-product-mobile.jpg" alt="Perfume Product" class="mobile">
+      <img src="./image-product-desktop.jpg" alt="Perfume Product" class="desktop">
     </div>
 
     <section class="content">
